# timeviewer

./: .gitignore  README.md
client/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/src/: graph.tsx  index.tsx  style.css  table.tsx  timelist.tsx  types.ts
monitor/TimeViewer/: AppDelegate.swift  Chrome.h  Info.plist  Main.storyboard
monitor/TimeViewer.xcodeproj/: project.pbxproj
monitor/TimeViewer/Assets.xcassets/Icon.imageset/: Contents.json
server/: .env  Cargo.toml
server/migrations/: 20210831012951_events.sql
server/src/: main.rs
