[package]
name = "timeviewer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
futures-util = "*"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite", "migrate", "chrono" ] }
chrono = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
