[package]
name = "timeviewer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "sqlite", "migrate", "chrono" ] }
chrono = "0.4"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
anyhow = "1.0"
